// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title d1 level renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
}

<h1
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d2 level renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
}

<h1
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.2;
}

<h1
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h2 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.25;
}

<h2
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h3 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 36px;
}

<h3
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h4 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 32px;
}

<h4
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h5 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 24px;
}

<h5
  className="rovna-ui-typography c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;
